# templates

./: .gitignore  TEMPLATES.md  pnpm-lock.yaml  templates.json
.github/workflows/: templates.json
community/privy-auth/: .env.example  .gitignore  README.md  package.json
community/privy-auth/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
community/privy-auth/src/app/dashboard/: page.tsx
community/privy-auth/src/components/: AuthGuard.tsx  AuthStatus.tsx  LoginButton.tsx  LogoutButton.tsx  UserProfile.tsx  WalletInfo.tsx
community/privy-auth/src/lib/: types.ts
community/staking/: .gitignore  README.md  package.json  tsconfig.json
community/staking/anchor/: Anchor.toml  Cargo.toml  tsconfig.json
community/staking/anchor/migrations/: deploy.ts
community/staking/anchor/programs/staking/: Cargo.toml
community/staking/anchor/programs/staking/src/: lib.rs
community/staking/anchor/src/: index.ts  staking-exports.ts
community/staking/anchor/tests/: staking.test.ts
community/staking/src/app/: globals.css  layout.tsx
community/staking/src/app/staking/: page.tsx
community/staking/src/components/: app-header.tsx  app-hero.tsx
community/staking/src/components/account/: account-list-feature.tsx
community/staking/src/components/dashboard/: dashboard-feature.tsx
community/staking/src/components/staking/: staking-data-access.tsx  staking-feature.tsx  staking-ui.tsx
