[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Pin blake3 to avoid edition2024 requirement (Solana BPF toolchain uses Cargo 1.84)
[workspace.dependencies]
blake3 = ">=1.5,<1.8.3"
